style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 26px;
  font-weight: 400;
  margin: 0 10px 20px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
}

main img {
  width: 100%;
}

/* ---  Groups & Items --- */

.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}

/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  padding: 20px 20px 0 20px;
  text-align: center;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
}

header nav {
  display: flex;
  justify-content: center;
}

header nav ul {
  display: flex;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

/* -------  Search Form ------- */
form {
  border: 2px solid #ff385c;
}

form div {
  display: flex;
  justify-content: space-between;
}

form div:first-child {
  margin-top: 20px;
}

form label {
  font-weight: bold;
  margin-left: 20px;
}

form select,
form input {
  margin-right: 20px;
  margin-bottom: 10px;
  width: auto;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
  margin: 0 20px 20px 20px;
}

/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */

@media all and (min-width: 768px) {
  .group {
    flex-direction: row;
    align-items: center;
  }
  header {
    display: flex;
    justify-content: space-between;
    padding: 0 30px;
  }
  .logo {
    font-size: 58px;
  }
  header nav {
    margin-top: 7px;
  }
  .search-group {
    display: flex;
    flex-direction: column;
  }
  form label,
  form select,
  form input {
    margin: 0;
  }
  form button {
    margin: 5px;
  }
}

